--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Visual Instruction Tuning">
+  <meta name="description" content="Grounding GPT">
   <meta name="keywords" content="multimodal chatbot">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>LLaVA</title>
+  <title>Bubo</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
@@ -114,32 +114,35 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Visual Instruction Tuning</h1>
-            <h3 class="title is-3 publication-title">LLaVA: Large Language and Vision Assistant</h3>
+            <h1 class="title is-1 publication-title">Grounding GPT</h1>
+            <h3 class="title is-3 publication-title">BuboGPT: Enabling Visual Grounding in Multi-Modal LLMs</h3>
             <div class="is-size-5">
               <span class="author-block">
-                <a href="https://hliu.cc/" style="color:#f68946;font-weight:normal;">Haotian Liu<sup>*</sup></a>,
+                <a href="https://scholar.google.com/citations?user=uPmTOHAAAAAJ&hl=en" style="color:#f68946;font-weight:normal;">Yang Zhao<sup>*</sup></a>,
               </span>
               <span class="author-block">
-                <a href="https://chunyuan.li/" style="color:#008AD7;font-weight:normal;">Chunyuan Li<sup>*</sup></a>,
+                <a href="https://scholar.google.com/citations?user=xXMj6_EAAAAJ&hl=zh-CN" style="color:#f68946;font-weight:normal;">Zhijie Lin</a>,
               </span>
               <span class="author-block">
-                <a href="https://qywu.github.io/about.html" style="color:#F2A900;font-weight:normal;">Qingyang Wu</a>,
+                <a href="https://scholar.google.com.sg/citations?user=NmHgX-wAAAAJ&hl=en" style="color:#f68946;font-weight:normal;">Bingyi Kang<sup>*</sup></a>,
               </span>
               <span class="author-block">
-                <a href="https://pages.cs.wisc.edu/~yongjaelee/" style="color:#f68946;font-weight:normal;">Yong Jae
+                <a href="https://scholar.google.com/citations?user=DdCAbWwAAAAJ&hl=en" style="color:#f68946;font-weight:normal;">Daquan Zhou<sup>*</sup></a>,
+              </span>
+              <span class="author-block">
+                <a href="https://scholar.google.com.sg/citations?user=GW9vw8UAAAAJ&hl=en" style="color:#f68946;font-weight:normal;">Zilong Huang<sup>*</sup></a>,
+              </span>
+              <span class="author-block">
+                <a href="https://sites.google.com/site/jshfeng/" style="color:#f68946;font-weight:normal;">Jiashi Feng
                   Lee</a>,
               </span>
             </div>
 
             <br>
             <div class="is-size-5 publication-authors">
-              <span class="author-block"><b style="color:#f68946; font-weight:normal">&#x25B6 </b> University of
-                Wisconsin-Madison</b></span>
-              <span class="author-block"><b style="color:#008AD7; font-weight:normal">&#x25B6 </b> Microsoft Research</span>
-              <span class="author-block"><b style="color:#F2A900; font-weight:normal">&#x25B6 </b>Columbia
-                University</span>
+              <span class="author-block"><b style="color:#008AD7; font-weight:normal">&#x25B6 </b> Bytedance Inc.</span>
               <span class="author-block">&nbsp&nbsp<sup>*</sup>Equal Contribution</span>
+              <span class="author-block">&nbsp&nbsp<sup>+</sup>Project Lead</span>
             </div>
 
 
