add in title and author info

--- a/index.html
+++ b/index.html
@@ -121,16 +121,16 @@
                 <a href="https://scholar.google.com/citations?user=uPmTOHAAAAAJ&hl=en" style="color:#f68946;font-weight:normal;">Yang Zhao<sup>*</sup></a>,
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=xXMj6_EAAAAJ&hl=zh-CN" style="color:#f68946;font-weight:normal;">Zhijie Lin</a>,
+		      <a href="https://scholar.google.com/citations?user=xXMj6_EAAAAJ&hl=zh-CN" style="color:#f68946;font-weight:normal;">Zhijie Lin<sup>*</sup></a>,
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.com.sg/citations?user=NmHgX-wAAAAJ&hl=en" style="color:#f68946;font-weight:normal;">Bingyi Kang<sup>*</sup></a>,
+                <a href="https://scholar.google.com.sg/citations?user=NmHgX-wAAAAJ&hl=en" style="color:#f68946;font-weight:normal;">Bingyi Kang<sup>*+</sup></a>,
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=DdCAbWwAAAAJ&hl=en" style="color:#f68946;font-weight:normal;">Daquan Zhou<sup>*</sup></a>,
+                <a href="https://scholar.google.com/citations?user=DdCAbWwAAAAJ&hl=en" style="color:#f68946;font-weight:normal;">Daquan Zhou</a>,
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.com.sg/citations?user=GW9vw8UAAAAJ&hl=en" style="color:#f68946;font-weight:normal;">Zilong Huang<sup>*</sup></a>,
+                <a href="https://scholar.google.com.sg/citations?user=GW9vw8UAAAAJ&hl=en" style="color:#f68946;font-weight:normal;">Zilong Huang</a>,
               </span>
               <span class="author-block">
                 <a href="https://sites.google.com/site/jshfeng/" style="color:#f68946;font-weight:normal;">Jiashi Feng
