add in title and author info

--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
                 <a href="https://scholar.google.com.sg/citations?user=GW9vw8UAAAAJ&hl=en" style="color:#f68946;font-weight:normal;">Zilong Huang</a>,
               </span>
               <span class="author-block">
-                <a href="https://sites.google.com/site/jshfeng/" style="color:#f68946;font-weight:normal;">Jiashi Feng
-                  Lee</a>,
+                <a href="https://sites.google.com/site/jshfeng/" style="color:#f68946;font-weight:normal;">Jiashi Feng</a>,
               </span>
             </div>
 
