add in title and author info

--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
     <div class="container is-max-desktop">
       <div class="hero-body">
         <h4 class="subtitle has-text-centered">
-          LLaVA represents a novel end-to-end trained large multimodal model that combines a vision encoder and Vicuna
-          for general-purpose visual and language understanding,
-          achieving impressive chat capabilities mimicking spirits of the multimodal GPT-4 and setting a new state-of-the-art accuracy on Science QA.
+	  BuboGPT is an advanced Large Language Model (LLM) that incorporates multi-modal inputs including text, image and audio, 
+	  with a unique ability to ground its responses to visual objects. It demonstrates remarkable chat abilities for arbitrary 
+	  image-audio data understanding, whether aligned or unaligned.
         </h4>
       </div>
     </div>
