--- a/index.html
+++ b/index.html
@@ -271,7 +271,12 @@
     <div class="column is-full-width">
       <div class="content has-text-justified">
         <p>
-          Based on the COCO dataset, we interact with langauge-only GPT-4, and collect 158K unique language-image instruction-following samples in total, including 58K in conversations, 23K in detailed description, and 77k in complex reasoning, respectively. Please check out ``LLaVA-Instruct-150K''' on 
+          Due to the scaling up of training data and model size,
+		large language models have demonstrated remarkable abilities across various linguistic
+		tasks in a few-shot and zero-shot manner and also enabled conversational communication with
+		humans. To leverage the powerful linguistic abilities of LLMs, some methods [20, 21 ] propose to
+		connect different accessedation models for multi-modal tasks by using LLMs as a dispatch scheduler.
+		Please check out ``LLaVA-Instruct-150K''' on 
           <a href="https://huggingface.co/datasets/liuhaotian/LLaVA-Instruct-150K">[HuggingFace Dataset]</a>.
 
 <!-- CSS Code: Place this code in the document's head (between the 'head' tags) -->
