--- a/index.html
+++ b/index.html
@@ -276,6 +276,12 @@
 		tasks in a few-shot and zero-shot manner and also enabled conversational communication with
 		humans. To leverage the powerful linguistic abilities of LLMs, some methods [20, 21 ] propose to
 		connect different accessedation models for multi-modal tasks by using LLMs as a dispatch scheduler.
+		<figure style="text-align: center;">
+          <img id="teaser" width="100%" src="images/framework.pdf">  
+          <figcaption>
+            Instruction: Detailed Description  [<a href="images/LLaVA-Instruct-150K_noun_verb/detail_23k_instruction_verb_noun_0.html">0</a>]
+          </figcaption>
+        </figure>
 		Please check out ``LLaVA-Instruct-150K''' on 
           <a href="https://huggingface.co/datasets/liuhaotian/LLaVA-Instruct-150K">[HuggingFace Dataset]</a>.
 
