--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 		humans. To leverage the powerful linguistic abilities of LLMs, some methods [20, 21 ] propose to
 		connect different accessedation models for multi-modal tasks by using LLMs as a dispatch scheduler.
 		<figure style="text-align: center;">
-          <img id="teaser" width="100%" src="images/framework.pdf">  
+          <img id="teaser" width="100%" src="images/bubogpt.png">  
           <figcaption>
             Instruction: Detailed Description  [<a href="images/LLaVA-Instruct-150K_noun_verb/detail_23k_instruction_verb_noun_0.html">0</a>]
           </figcaption>
