--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Grounding GPT">
   <meta name="keywords" content="multimodal chatbot">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bubo</title>
+  <title>BuboGPT</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
@@ -115,7 +115,7 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title"><img id="painting_icon" width="5%" src="./images/logo.png"> Bubo GPT</h1>
-            <h3 class="title is-3 publication-title">BuboGPT: Enabling Visual Grounding in Multi-Modal LLMs</h3>
+            <h3 class="title is-3 publication-title">Enabling Visual Grounding in Multi-Modal LLMs</h3>
             <div class="is-size-5">
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=uPmTOHAAAAAJ&hl=en" style="color:#f68946;font-weight:normal;">Yang Zhao<sup>*</sup></a>,
