--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title"><img id="painting_icon" width="5%" src="./images/logo.png"> Bubo GPT</h1>
+            <h1 class="title is-1 publication-title"><img id="painting_icon" width="5%" src="./images/logo.png"> BuboGPT:</h1>
             <h3 class="title is-3 publication-title">Enabling Visual Grounding in Multi-Modal LLMs</h3>
             <div class="is-size-5">
               <span class="author-block">
