--- a/index.html
+++ b/index.html
@@ -235,10 +235,8 @@
   <div class="columns is-centered has-text-centered">
     <div class="column is-six-fifths">
       <h2 class="title is-3">Video Presentation</h2>
+      <iframe width="900" height="500" src="https://www.youtube.com/embed/k4zFwXkQYKM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
     </div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/k4zFwXkQYKM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="">
-	
-</iframe>
   </div>
 </section>
   <section class="section"  style="background-color:#efeff081">
