--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ dataset to fine tune only the linear projection layer:
     </div>
   </div>
 
-  <div class="container mt-5 is-centered">
+  <div class="container mt-5 is-centered  has-text-centered">
     <img id="painting_icon" width="45%" src="./images/vision/Pic-1.jpg">
     <img id="painting_icon" width="45%" src="./images/vision/Pic-2.jpg">
     <img id="painting_icon" width="45%" src="./images/vision/Pic-3.jpg">
@@ -528,7 +528,7 @@ dataset to fine tune only the linear projection layer:
     </div>
   </div>
 
-  <div class="container mt-5 is-centered">
+  <div class="container mt-5 is-centered has-text-centered">
     <img id="painting_icon" width="45%" src="./images/audio/Aud-1.jpg">
     <img id="painting_icon" width="45%" src="./images/audio/Aud-2.jpg">
     <img id="painting_icon" width="45%" src="./images/audio/Aud-3.jpg">
@@ -544,7 +544,7 @@ dataset to fine tune only the linear projection layer:
     </div>
   </div>
 
-  <div class="container mt-5 is-centered">
+  <div class="container mt-5 is-centered   has-text-centered">
     <img id="painting_icon" width="45%" src="./images/audio-image-aligned/Pic-Aud-1.jpg">
     <img id="painting_icon" width="45%" src="./images/audio-image-aligned/Pic-Aud-2.jpg">
     <img id="painting_icon" width="45%" src="./images/audio-image-aligned/Pic-Aud-3.jpg">
@@ -558,7 +558,7 @@ dataset to fine tune only the linear projection layer:
     </div>
   </div>
 
-  <div class="container mt-5 is-centered">
+  <div class="container mt-5 is-centered   has-text-centered">
     <img id="painting_icon" width="45%" src="./images/audio-image-unaligned/Pic-Aud-5.jpg">
     <img id="painting_icon" width="45%" src="./images/audio-image-unaligned/Pic-Aud-6.jpg">
   </div>
