--- a/index.html
+++ b/index.html
@@ -457,13 +457,13 @@ dataset to fine tune only the linear projection layer:
   
 
 
-<section class="section">
+<!-- <section class="section">
   <!-- Results. -->
   <div class="columns is-centered has-text-centered">
     <div class="column is-six-fifths">
       <h2 class="title is-3"><img id="painting_icon" width="3%" src="https://cdn-icons-png.flaticon.com/512/3515/3515174.png"> Performance</h2>
     </div>
-  </div>
+  </div> -->
 
 
 
@@ -499,7 +499,7 @@ dataset to fine tune only the linear projection layer:
 <!--              -->
 <!--    </div>-->
 <!--  </div>-->
-</section>
+<!-- </section> -->
 
 
 
