--- a/index.html
+++ b/index.html
@@ -225,6 +225,10 @@
         <div class="columns is-centered has-text-centered">
     <div class="column is-six-fifths">
       <iframe width="900" height="500" src="https://www.youtube.com/embed/uRdmC3wPz6k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
+      <div class="is-size-6 publication-authors">
+        <span class="author-block"><b style="color:#008AD7; font-weight:normal">&#x25B6 </b> Bubo owls are well known for having strong
+          <strong>vision</strong> and <strong>hearing</strong> abilities that help them thrive.</span>
+      </div>
     </div>
   </div>
       </div>
@@ -635,7 +639,7 @@ dataset to fine tune only the linear projection layer:
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
-  @article{liu2023llava,
+  @article{zhao2023bubogpt,
     author      = {Yang Zhao and Zhijie Lin and Daquan Zhou and Zilong Huang and Jiashi Feng and Bingyi Kang},
     title       = {BuboGPT: Enabling Visual Grounding in Multi-Modal LLMs},
     publisher   = {},
