--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="column has-text-centered">
               <div class="publication-links">
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/2304.08485" target="_blank"
+                  <a href="" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -166,7 +166,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://llava.hliu.cc" target="_blank"
+                  <a href="" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="far fa-images"></i>
@@ -184,7 +184,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://huggingface.co/liuhaotian/LLaVA-13b-delta-v0" target="_blank"
+                  <a href="https://huggingface.co/magicr/BuboGPT-ckpt/resolve/main/bubogpt_7b.pth" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-share-square"></i>
