--- a/index.html
+++ b/index.html
@@ -513,6 +513,20 @@ dataset to fine tune only the linear projection layer:
   <div class="columns is-centered has-text-centered">
     <div class="column is-six-fifths">
       <h2 class="title is-3"> <img id="painting_icon" width="3%" src="./images/logo.png"> Examples on Fine-grained Visual Understanding</h2>
+      <div class="container is-max-desktop">
+      <!-- Abstract. -->
+        <div class="columns is-centered has-text-centered">
+          <div class="column is-six-fifths">
+            <div class="content has-text-justified">
+              <p>
+                We first consider using a single image as input for fine-grained visual understanding with grounding. As the exmaples shown,
+                the model can accurately associate textural words or phrases with image regions in various scenarios with different complexities.
+             </p>
+
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -529,6 +543,20 @@ dataset to fine tune only the linear projection layer:
   <div class="columns is-centered has-text-centered">
     <div class="column is-six-fifths">
       <h2 class="title is-3"> <img id="painting_icon" width="3%" src="./images/logo.png"> Examples on Audio Understanding</h2>
+      <div class="container is-max-desktop">
+      <!-- Abstract. -->
+        <div class="columns is-centered has-text-centered">
+          <div class="column is-six-fifths">
+            <div class="content has-text-justified">
+              <p>
+                When a single audio clip is provided for audio understanding, BuboGPT gives informative descriptions covering nearly all acoustic parts included,
+                even when some audio fragments are too short for humans to notice, see examples for details.
+             </p>
+
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -545,6 +573,20 @@ dataset to fine tune only the linear projection layer:
   <div class="columns is-centered has-text-centered">
     <div class="column is-six-fifths">
       <h2 class="title is-3"> <img id="painting_icon" width="3%" src="./images/logo.png"> Examples on Aligned audio-image understanding</h2>
+      <div class="container is-max-desktop">
+      <!-- Abstract. -->
+        <div class="columns is-centered has-text-centered">
+          <div class="column is-six-fifths">
+            <div class="content has-text-justified">
+              <p>
+                We show that BuboGPT can perform sound localization with a matched audio-image pair provided,
+                which gives a perfect example for aligned audio-image understanding, see examples for details.
+             </p>
+
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -559,6 +601,20 @@ dataset to fine tune only the linear projection layer:
   <div class="columns is-centered has-text-centered">
     <div class="column is-six-fifths">
       <h2 class="title is-3"> <img id="painting_icon" width="3%" src="./images/logo.png"> Examples on Arbitrary audio-image understanding</h2>
+      <div class="container is-max-desktop">
+      <!-- Abstract. -->
+        <div class="columns is-centered has-text-centered">
+          <div class="column is-six-fifths">
+            <div class="content has-text-justified">
+              <p>
+                The BuboGPT can also tell whether the image and audio are relevant to each other and generate high-quality response
+                for arbitrary audio-image understanding, see examples for details.
+             </p>
+
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
