--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@ dataset to fine tune only the linear projection layer:
   @article{zhao2023bubogpt,
     author      = {Yang Zhao and Zhijie Lin and Daquan Zhou and Zilong Huang and Jiashi Feng and Bingyi Kang},
     title       = {BuboGPT: Enabling Visual Grounding in Multi-Modal LLMs},
-    publisher   = {},
+    publisher   = {arXiv},
     year        = {2023}
   }
   </code></pre>
