--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <a href="https://sites.google.com/site/jshfeng/" style="color:#f68946;font-weight:normal;">Jiashi Feng</a>,
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.com.sg/citations?user=NmHgX-wAAAAJ&hl=en" style="color:#f68946;font-weight:normal;">Bingyi Kang<sup>*+</sup></a>,
+                <a href="https://scholar.google.com.sg/citations?user=NmHgX-wAAAAJ&hl=en" style="color:#f68946;font-weight:normal;">Bingyi Kang<sup>+</sup></a>,
               </span>
             </div>
 
