--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <span class="icon">
                       <i class="far fa-images"></i>
                     </span>
-                    <span>Demo (coming sonn)</span>
+                    <span>Demo (coming soon)</span>
                   </a>
                 </span>
                 <span class="link-block">
