--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="" target="_blank"
+                  <a href="https://huggingface.co/spaces/magicr/BuboGPT" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="far fa-images"></i>
                     </span>
-                    <span>Demo (coming soon)</span>
+                    <span>Demo</span>
                   </a>
                 </span>
                 <span class="link-block">
